--- a/drones/public/css/app.css
+++ b/drones/public/css/app.css
@@ -8522,6 +8522,58 @@ body {
   opacity: 0.8;
 }
 
+.testo-top-product {
+  height: 80px;
+}
+
+.products-content {
+  position: relative;
+  background-color: #2a2a2a;
+  opacity: 0.8;
+  border-radius: 5px;
+  height: 430px;
+  width: 100%;
+  padding: 20px;
+  overflow-y: scroll;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.product input {
+  width: 70px;
+  margin-right: 10px;
+  margin-left: 10px;
+  background-color: #2F3133;
+}
+
+.product {
+  margin-top: 7px;
+  margin-bottom: 5px;
+  height: 60px;
+}
+
+hr {
+  color: #e5e5e5;
+}
+
+.product label {
+  color: #e5e5e5;
+  margin-left: 80px;
+  margin-top: -30px;
+}
+
+.btn-product {
+  position: relative;
+  float: right;
+  margin-top: 2px;
+  margin-bottom: 20px;
+  font-size: 24px;
+  width: 150px;
+  height: 60px;
+  font-style: italic;
+  padding: auto;
+}
+
 /***** Media queries *****/
 
 @media (min-width: 992px) and (max-width: 1199px) {
