--- a/drones/public/css/app.css
+++ b/drones/public/css/app.css
@@ -8351,8 +8351,9 @@ button.close {
 }
 
 body {
-  background: url(/images/2.jpg?90cb7de37cf275a4e0b9490d0bee5c9c) no-repeat center center;
+  background: url(/images/2.jpg?90cb7de37cf275a4e0b9490d0bee5c9c) no-repeat center center fixed;
   background-size: cover;
+  height: 100%;
 }
 
 .home-content {
@@ -8392,11 +8393,13 @@ body {
   font-style: italic;
 }
 
+/* VIEW insertAddress  */
+
 .address-content {
   margin-top: 60px;
   background-color: #1e1d1d;
-  opacity: 0.8;
-  border-radius: 15px;
+  opacity: 0.9;
+  border-radius: 10px;
   height: 650px;
   width: 700px;
   padding-top: 10px;
@@ -8420,6 +8423,30 @@ body {
   float: left;
 }
 
+.btn-address {
+  position: relative;
+  font-size: 18px;
+  width: 110px;
+  height: 40px;
+  font-style: italic;
+  margin-right: 10px;
+  margin-top: 20px;
+}
+
+#text_via {
+  color: #f9f2f4;
+}
+
+#spanCheckOk {
+  visibility: hidden;
+}
+
+#spanCheckNo {
+  visibility: hidden;
+}
+
+/* mappa */
+
 #map {
   position: relative;
   height: 460px;
@@ -8427,20 +8454,6 @@ body {
   margin-top: -30px;
   margin-bottom: 10px;
 }
-
-.btn-address {
-  position: relative;
-  float: right;
-  margin-top: 2px;
-  margin-bottom: 20px;
-  font-size: 24px;
-  width: 150px;
-  height: 60px;
-  font-style: italic;
-  padding: auto;
-}
-
-/* mappa */
 
 #description {
   font-family: Roboto;
@@ -8517,88 +8530,69 @@ body {
   width: 345px;
 }
 
-.text_via {
-  float: left;
-  background-color: #1e1d1d;
-  opacity: 0.8;
-}
-
-#text_via {
-  color: #f9f2f4;
-}
-
-.text_via span {
-  margin-left: 20px;
-  visibility: hidden;
-}
-
-/*
-.CheckButton{
-  width: 80px;
-  height: 25px;
-  font-size: 15px;
-  padding:auto;
-}
-*/
-
-.testo-top-product {
-  height: 80px;
-}
-
-.products-content {
-  position: relative;
-  background-color: #2a2a2a;
-  opacity: 0.8;
-  border-radius: 5px;
-  height: 430px;
-  width: 100%;
-  padding: 20px;
-  overflow-y: scroll;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.product input {
-  width: 70px;
-  margin-right: 10px;
-  margin-left: 10px;
-  background-color: #2F3133;
-}
-
-.product {
-  margin-top: 7px;
-  margin-bottom: 5px;
-  height: 60px;
-}
-
-hr {
-  color: #e5e5e5;
-}
-
-.product label {
-  color: #e5e5e5;
-  margin-left: 80px;
-  margin-top: -30px;
-}
+/* VIEW insertProduct  */
 
 .btn-product {
   position: relative;
   float: right;
   margin-top: 2px;
-  margin-bottom: 20px;
-  font-size: 24px;
-  width: 150px;
-  height: 60px;
+  margin-left: 30px;
+  font-size: 18px;
+  width: 110px;
+  height: 40px;
   font-style: italic;
-  padding: auto;
+  padding-left: 5px;
+}
+
+.products-content-external {
+  position: relative;
+  background-color: #1e1d1d;
+  opacity: 0.8;
+  border-radius: 10px;
+  padding: 20px;
+  margin-top: 5%;
+}
+
+.testo-top-product {
+  height: 80px;
+}
+
+.testo-top-product h3 {
+  color: #e5dede;
+}
+
+.testo-top-product p {
+  color: #e5dede;
+}
+
+.products-content-internal {
+  position: relative;
+  background-color: #1e1d1d;
+  opacity: 0.9;
+  height: 80%;
+  overflow-y: scroll;
+  min-height: 300px;
+  max-height: 400px;
+  padding-top: 20px;
+}
+
+.quantity-products {
+  width: 70px;
+  background-color: #2F3133;
+}
+
+.table {
+  color: #d6cfcf;
 }
 
 /***** Media queries *****/
 
+/*
 @media (min-width: 992px) and (max-width: 1199px) {
-  .home-content {
+  .home-content{
+
     margin-top: 100px;
-    background-color: #1e1d1d;
+    background-color:#1e1d1d;
     opacity: 0.8;
     border-radius: 15px;
     height: 500px;
@@ -8608,15 +8602,15 @@ hr {
     padding-left: 50px;
   }
 
-  .home-content h1 {
+  .home-content h1{
     position: relative;
-    color: white;
+    color:white;
     text-align: center;
     font-size: 60px;
     font-style: italic;
   }
 
-  .home-content p {
+  .home-content p{
     position: relative;
     color: white;
     font-size: 20px;
@@ -8624,7 +8618,7 @@ hr {
     font-style: italic;
   }
 
-  .btn {
+  .btn{
     position: relative;
     margin-left: 15%;
     font-size: 28px;
@@ -8632,17 +8626,21 @@ hr {
     height: 80px;
     font-style: italic;
   }
+
 }
 
-@media (max-width: 991px) {
+@media  (max-width: 991px) {
   body {
-    background: url(/images/2_medio.jpg?e030423137beae38b032c71240815f0c) no-repeat center center;
+    background: url('../images/2_medio.jpg') no-repeat center center;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
   }
+  .home-content{
 
-  .home-content {
     margin-top: 100px;
-    background-color: #1e1d1d;
+    background-color:#1e1d1d;
     opacity: 0.8;
     border-radius: 15px;
     height: 500px;
@@ -8652,15 +8650,15 @@ hr {
     padding-left: 50px;
   }
 
-  .home-content h1 {
+  .home-content h1{
     position: relative;
-    color: white;
+    color:white;
     text-align: center;
     font-size: 50px;
     font-style: italic;
   }
 
-  .home-content p {
+  .home-content p{
     position: relative;
     color: white;
     font-size: 20px;
@@ -8668,7 +8666,7 @@ hr {
     font-style: italic;
   }
 
-  .btn {
+  .btn{
     position: relative;
     margin-left: 15%;
     font-size: 28px;
@@ -8677,4 +8675,5 @@ hr {
     font-style: italic;
   }
 }
+*/
 
