--- a/drones/resources/assets/sass/app.scss
+++ b/drones/resources/assets/sass/app.scss
@@ -11,12 +11,15 @@
 
 
 body {
-  background: url('../images/2.jpg') no-repeat center center;
+  background: url('../images/2.jpg') no-repeat center center fixed;
   -moz-background-size: cover;
   -webkit-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  height:100%;
 }
+
+
 
 .home-content{
 
@@ -56,14 +59,14 @@ body {
   font-style: italic;
 }
 
-
+/* VIEW insertAddress  */
 
 .address-content{
 
   margin-top: 60px;
   background-color:#1e1d1d;
-  opacity: 0.8;
-  border-radius: 15px;
+  opacity: 0.9;
+  border-radius: 10px;
   height: 650px;
   width: 700px;
   padding-top: 10px;
@@ -88,6 +91,33 @@ body {
 }
 
 
+.btn-address{
+  position: relative;
+  font-size: 18px;
+  width: 110px;
+  height: 40px;
+  font-style: italic;
+  margin-right: 10px;
+  margin-top: 20px;
+}
+
+
+#text_via{
+  color: #f9f2f4;
+}
+
+#spanCheckOk{
+  //margin-left: 20px;
+  visibility: hidden;
+}
+#spanCheckNo{
+  //margin-left: 20px;
+  visibility: hidden;
+}
+
+
+/* mappa */
+
 #map {
   position: relative;
   height: 460px;
@@ -96,19 +126,6 @@ body {
   margin-bottom: 10px;
 }
 
-.btn-address{
-  position: relative;
-  float: right;
-  margin-top: 2px;
-  margin-bottom: 20px;
-  font-size: 24px;
-  width: 150px;
-  height: 60px;
-  font-style: italic;
-  padding: auto;
-}
-
-/* mappa */
 #description {
   font-family: Roboto;
   font-size: 15px;
@@ -181,86 +198,68 @@ body {
   width: 345px;
 }
 
-.text_via{
-  float: left;
-  background-color:#1e1d1d;
-  opacity: 0.8;
-}
-
-#text_via{
-  color: #f9f2f4;
-}
-
-.text_via span{
-  margin-left: 20px;
-  visibility: hidden;
-}
-
-/*
-.CheckButton{
-  width: 80px;
-  height: 25px;
-  font-size: 15px;
-  padding:auto;
-}
-*/
-
-.testo-top-product{
-  height: 80px;
-}
-
-.products-content{
-  position: relative;
-  background-color:#2a2a2a;
-  opacity: 0.8;
-  border-radius: 5px;
-  height: 430px;
-  width: 100%;
-  padding: 20px;
-  overflow-y: scroll;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
 
 
-.product input{
-  width: 70px;
-  margin-right:10px;
-  margin-left: 10px;
-  background-color: #2F3133;
-}
 
-.product{
-  margin-top: 7px;
-  margin-bottom: 5px;
-  height: 60px;
-}
 
-hr {
-  color: #e5e5e5;
-}
-
-.product label{
-  color: #e5e5e5;
-  margin-left: 80px;
-  margin-top: -30px;
-}
-
+/* VIEW insertProduct  */
 
 .btn-product{
   position: relative;
   float: right;
   margin-top: 2px;
-  margin-bottom: 20px;
-  font-size: 24px;
-  width: 150px;
-  height: 60px;
+  margin-left: 30px;
+  font-size: 18px;
+  width: 110px;
+  height: 40px;
   font-style: italic;
-  padding: auto;
+  padding-left: 5px;
+}
+
+
+.products-content-external{
+  position: relative;
+  background-color:#1e1d1d;
+  opacity: 0.8;
+  border-radius: 10px;
+  padding: 20px;
+  margin-top: 5%;
+}
+
+.testo-top-product{
+  height: 80px;
+}
+
+.testo-top-product h3 {
+  color: #e5dede;
+}
+
+.testo-top-product p {
+  color: #e5dede;
+}
+
+.products-content-internal{
+  position: relative;
+  background-color:#1e1d1d;
+  opacity: 0.9;
+  height: 80%;
+  overflow-y: scroll;
+  min-height: 300px;
+  max-height: 400px;
+  padding-top: 20px ;
+}
+
+.quantity-products{
+  width: 70px;
+  background-color: #2F3133;
+}
+
+.table{
+  color:#d6cfcf;
 }
 
 /***** Media queries *****/
-
+/*
 @media (min-width: 992px) and (max-width: 1199px) {
   .home-content{
 
@@ -348,4 +347,5 @@ hr {
     font-style: italic;
   }
 }
+*/
 
