--- a/drones/public/css/all/app.css
+++ b/drones/public/css/all/app.css
@@ -1,3 +1,13 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);@charset "UTF-8";
+
+/*!
+ * Bootstrap v3.3.7 (http://getbootstrap.com)
+ * Copyright 2011-2016 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ */
+
+/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -8340,371 +8350,3 @@ button.close {
   }
 }
 
-.btn {
-  margin-top: 40%;
-  font-size: 32px;
-  width: 250px;
-  height: 120px;
-=======
-  margin-top: 90px;
-  background-color:#1e1d1d;
-  opacity: 0.8;
-  border-radius: 15px;
-  height: 550px;
-  width: 380px;
-  padding-top: 80px;
-  padding-right: 50px;
-  padding-left: 50px;
-}
-
-.home-content h1{
-  position: relative;
-  color:white;
-  text-align: center;
-  font-size: 60px;
-  font-style: italic;
-}
-
-.home-content p{
-  position: relative;
-  color: white;
-  font-size: 20px;
-  text-align: center;
-  font-style: italic;
-}
-
-.btn{
-  position: relative;
-  margin-left: 15%;
-  font-size: 28px;
-  width: 200px;
-  height: 80px;
-  font-style: italic;
-}
-
-
-body {
-	background: url('../images/2.jpg') no-repeat center center fixed;
-  	-moz-background-size: cover;
-  	-webkit-background-size: cover;
-  	-o-background-size: cover;
-  	background-size: cover;
-  	height:100%;
-}
-
-/* VIEW insertAddress  */
-
-.address-content{
- 	margin-top: 60px;
-  	background-color:#1e1d1d;
-	opacity: 0.9;
-	border-radius: 10px;
-	height: 650px;
-	width: 700px;
-	padding-top: 10px;
-	padding-right: 10px;
-	padding-left: 10px;
-	padding-bottom: 10px;
-}
-
-.address-content h3{
-	color: white;
-	font-size:30px;
-	margin-top: 0px;
-}
-
-.address-content p{
-  position: relative;
-  color: white;
-  margin-top: 0px;
-  font-size: 15px;
-  font-style: italic;
-  float: left;
-}
-
-
-.btn-address{
-  position: relative;
-  font-size: 18px;
-  width: 110px;
-  height: 40px;
->>>>>>> Stashed changes
-  font-style: italic;
-}
-
-<<<<<<< Updated upstream
-.logo {
-  color: #337ab7;
-}
-
-.sfondo {
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-position: bottom;
-  background-size: cover;
-  -o-background-size: cover;
-  min-height: 700px;
-=======
-
-#text_via{
-  color: #f9f2f4;
-}
-
-#spanCheckOk{
-  //margin-left: 20px;
-  visibility: hidden;
-}
-#spanCheckNo{
-  //margin-left: 20px;
-  visibility: hidden;
->>>>>>> Stashed changes
-}
-
-
-/* mappa */
-
-#map {
-  position: relative;
-  min-height: 490px;
-  width: 100%;
-  margin-button: 30px;
-}
-
-#description {
-  font-family: Roboto;
-  font-size: 15px;
-  font-weight: 300;
-}
-
-#infowindow-content .title {
-  font-weight: bold;
-}
-
-#infowindow-content {
-  display: none;
-}
-
-#map #infowindow-content {
-  display: inline;
-}
-
-.pac-card {
-  margin: 10px 10px 0 0;
-  border-radius: 2px 0 0 2px;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  outline: none;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-  background-color: #fff;
-  font-family: Roboto;
-}
-
-#pac-container {
-  padding-bottom: 12px;
-  margin-right: 12px;
-}
-
-.pac-controls {
-  display: inline-block;
-  padding: 5px 11px;
-}
-
-.pac-controls label {
-  font-family: Roboto;
-  font-size: 13px;
-  font-weight: 300;
-}
-
-#pac-input {
-  background-color: #fff;
-  font-family: Roboto;
-  font-size: 15px;
-  font-weight: 300;
-  margin-left: 12px;
-  padding: 0 11px 0 13px;
-  text-overflow: ellipsis;
-  width: 400px;
-  margin-top: 10px;
-  float: center;
-}
-
-#pac-input:focus {
-  border-color: #4d90fe;
-}
-
-#title {
-  color: #fff;
-  background-color: #4d90fe;
-  font-size: 25px;
-  font-weight: 500;
-  padding: 6px 12px;
-}
-#target {
-  width: 345px;
-}
-
-<<<<<<< Updated upstream
-#spanCheckOk {
-  visibility: hidden;
-}
-
-#spanCheckNo {
-  visibility: hidden;
-}
-
-a.bottone {
-  visibility: hidden;
-=======
-
-
-
-
-/* VIEW insertProduct  */
-
-.btn-product{
-  position: relative;
-  float: right;
-  margin-top: 2px;
-  margin-left: 30px;
-  font-size: 18px;
-  width: 110px;
-  height: 40px;
-  font-style: italic;
-  padding-left: 5px;
-}
-
-
-.products-content-external{
-  position: relative;
-  background-color:#1e1d1d;
-  opacity: 0.8;
-  border-radius: 10px;
-  padding: 20px;
-  margin-top: 5%;
-}
-
-.testo-top-product{
-  height: 80px;
->>>>>>> Stashed changes
-}
-
-.quantity-products {
-  width: 80px;
-}
-
-/*
-a.bottoneProd{
-  visibility: hidden;
-}
-*/
-
-<<<<<<< Updated upstream
-.tabella {
-  max-height: 420px;
-  overflow-y: scroll;
-  border: #dbdbdb 1px solid;
-  border-radius: 5px;
-}
-
-.total {
-  float: right;
-  margin-right: 130px;
-}
-
-.bread-total ol {
-  margin-top: 3%;
-  height: 40px;
-}
-
-.total-drone {
-  height: 20px;
-  width: 20px;
-}
-
-.drones {
-  float: left;
-}
-=======
-.products-content-internal{
-  position: relative;
-  background-color:#1e1d1d;
-  opacity: 0.9;
-  height: 80%;
-  overflow-y: scroll;
-  min-height: 300px;
-  max-height: 400px;
-  padding-top: 20px ;
-}
-
-.quantity-products{
-  width: 70px;
-  background-color: #2F3133;
-}
-
-.table{
-  color:#d6cfcf;
-}
-
-/***** Media queries *****/
-/*
-@media (min-width: 992px) and (max-width: 1199px) {
-  .home-content{
->>>>>>> Stashed changes
-
-/* menu laterale */
-
-.menu li {
-  height: 100px;
-  width: 100%;
-}
-
-.menu p {
-  font-size: 20px;
-  text-align: center;
-  color: #bababa;
-}
-
-.menu span {
-  height: 50px;
-  width: 50px;
-  margin-left: 40%;
-  color: #bababa;
-}
-
-.primo-li li {
-  padding-top: 20%;
-}
-
-.ombra li {
-  background-color: #111111;
-}
-
-.ombra p {
-  text-shadow: 0 0 25px #bababa;
-  color: #337ab7;
-}
-
-.ombra span {
-  text-shadow: 0 0 25px #337ab7;
-  color: #337ab7;
-}
-
-/* Small Devices, Tablets */
-
-@media only screen and (max-width: 768px) {
-  .menu span {
-    height: 50px;
-    width: 50px;
-    margin-left: 48%;
-    color: #bababa;
-  }
-
-  .primo-li li {
-    padding-top: 25px;
-  }
-}
-<<<<<<< Updated upstream
-
-=======
-*/
->>>>>>> Stashed changes
