--- a/drones/public/css/app.css
+++ b/drones/public/css/app.css
@@ -11,7 +11,7 @@
 }
 
 .sfondo{
-  //background-image: url('../img/sfondo.png');
+  background-image: url('/images/sfondo.png');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: bottom;
@@ -108,6 +108,7 @@
 #spanCheckOk{
   visibility: hidden;
 }
+
 #spanCheckNo{
   visibility: hidden;
 }
@@ -142,7 +143,7 @@ a.bottoneProd{
 }
 
 .total-drone{
-  //background-color: url('../img/drone-ico.png');
+  //background-color: url('../images/drone-ico.png');
   height: 20px;
   width: 20px;
 }
