view confirm (mezz ita, mezz eng)

--- a/drones/public/css/app.css
+++ b/drones/public/css/app.css
@@ -252,10 +252,13 @@ a.bottoneProd{
 }
 
 .continued{
-  margin-top: 20%;
-  color: #222222;
+  margin-top: 5%;
+
 }
 
+h1.continued{
+  color: #222222;
+}
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
@@ -270,6 +273,23 @@ a.bottoneProd{
   }
 }
 
+.btn-confirm{
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 120px;
+}
+
+.botton-order{
+  margin-top: 50px;
+}
+
+.btn-confirm-total{
+  margin-left: 10px;
+  margin-top: 40px;
+  margin-bottom: 10px;
+  width: 120px;
+}
 /*!
  * Start Bootstrap - SB Admin (http://startbootstrap.com/)
  * Copyright 2013-2016 Start Bootstrap
