--- a/drones/public/css/app.css
+++ b/drones/public/css/app.css
@@ -290,6 +290,10 @@ h1.continued{
   margin-bottom: 10px;
   width: 150px;
 }
+
+.check{
+  color: green;
+}
 /*!
  * Start Bootstrap - SB Admin (http://startbootstrap.com/)
  * Copyright 2013-2016 Start Bootstrap
